2008-11-25  Martin Leidig <mleidig@schlund.de>

	Released Pfixcore 0.13.3

2008-11-25  Martin Leidig  <mleidig@schlund.de>

	Updated Spring to 2.5.6.

	* src/org/pustefixframework/config/contextxmlservice/parser/internal/StateConfigImpl.java:
	make map modifiable to fix issue with Spring 2.5.6
	PropertyPlaceholderConfigurer 

	Added:
	* lib/spring-2.5.6.jar
	* lib/spring-webmvc-2.5.6.jar

	Removed:
	* lib/spring-2.5.3.jar
	* lib/spring-webmvc-2.5.3.jar

2008-11-24  Martin Leidig  <mleidig@schlund.de>

	Re-added getRequestCookies() to Context because there are use cases
	for accessing cookies in Handlers and you don't want to write an own
	state or interceptor only for storing cookie information.
	* src/de/schlund/pfixcore/workflow/Context.java
	* src/de/schlund/pfixcore/workflow/ContextImpl.java
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java

2008-11-24  Martin Leidig  <mleidig@schlund.de>

	Fixed config-include bug for resources (namespace unawareness problem)
	* src/org/pustefixframework/config/contextxmlservice/parser/ContextResourceParsingHandler.java

2008-11-21  Martin Leidig  <mleidig@schlund.de>

	Added support for referencing parent bean definitions from the
	defaultstate and defaultihandlerstate elements (parent-bean-ref
	attribute). Thus it's possible to indirectly inject dependencies 
	into the concrete instances by injecting them into the parent bean 
	definition. So, despite the fact, that the beans are automatically 
	created by Pustefix, you're able to inject dependencies using
	the Spring XML configuration.
	
	The following example configures a custom default state, which has a
	data property. You can define an according abstract bean definition

	<bean id="default_state" abstract="true">
	   <property name="data" ref="testdata"/>
	</bean>

	and reference this definition in your configuration:

	<defaultstate class="test.DefaultStaticState" parent-bean-ref="default_state"/>
